report in latex is added

--- a/report.ipynb
+++ b/report.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> filter the loan status to be only fully paid and charged off"
+    "We filter the loan status to be only fully paid and charged off"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nulls Distribtion\n",
+    "## Handling Null Values\n",
     "- Get columns which has the most number of null values and sort them"
    ]
   },
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Visualize the most 50 columns with null values"
+    "- Visualize the most 50 columns with null values"
    ]
   },
   {
@@ -211,14 +211,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The first most 50 columns with highest numbers>  of nulls values (Almost all the values are null as number of rows are 1345309 initially) So we have to drop them all as deletion of the rows equivelant to the deletion of most of the data and I can't replace it with any value as most of the values are null, and also if these columns are important they would be filled"
+    "The first most 50 columns with highest numbers of null values (Almost all the values are null as number of rows are 1345309 initially) So we have to drop them all as deletion of the rows means the deletion of most of the data and I can't replace it mean value as most of the values are null it won't be the best option, and also if these columns are important they would be filled, so We will drop them"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Visualize the next most 50 columns in null values count"
+    "- Next, We visualize the next most 50 columns have null values count"
    ]
   },
   {
@@ -248,56 +248,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The first 95 columns has lots of nulls so I will drop them"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Next, I will drop the rows which has null values they will have a small number of rows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.na.drop()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Number of Rows and Columns Now"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1340812, 56)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(spark_df_shape(df))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Rows Dropped Successfully"
+    "- From the previous graph the first 95 columns has lots of nulls so I will drop them\n",
+    "- Next, We will drop the rows which has null values they will have a small number of rows\n",
+    "- Now the Number Of Columns = 56, Number Of Rows = 1340812"
    ]
   },
   {
@@ -311,7 +264,7 @@
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -333,6 +286,13 @@
     "plt.title(\"Loan amount histogram\")\n",
     "plt.xlabel(\"Loan Amount\")\n",
     "plt.ylabel(\"Count\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Most of loan amount 10,000 to 11,000 usd"
    ]
   },
   {
@@ -393,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Drop the followin columns as they are constant columns and doesn't contribute to our prediction of loan_status"
+    "From the above graphs, We can deduce that we have duplicates information for example, Drop the followin columns as they are constant columns and doesn't contribute to our prediction of loan_status"
    ]
   },
   {
@@ -819,7 +779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Map loan_status to new column called loan_is_paid has 1 and 0 values only, 1 for Fully Paid and 0 for Charged Off, and then drop the old loan_status column"
+    "Map loan_status to new column called loan_is_paid has 1 and 0 values only, 1 for Fully Paid and 0 for Charged Off, and then drop the old loan_status column"
    ]
   },
   {
@@ -872,7 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> New Correlation matrix"
+    "New Correlation matrix:"
    ]
   },
   {
@@ -942,7 +902,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> map term column to new term_months columns with mapped values from ' 36 months' to 36 and from ' 60 months' to 60, and then drop the old term column"
+    "map term column to new term_months columns with mapped values from ' 36 months' to 36 and from ' 60 months' to 60, and then drop the old term column"
    ]
   },
   {
@@ -1028,7 +988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> We can merge NONE with ANY in one category"
+    "We can merge NONE with ANY in one category"
    ]
   },
   {
@@ -1141,15 +1101,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> grade is part of sub_grade, so let's drop it\n",
+    "From the above graphs and analysis we can deduce that:\n",
     "\n",
-    "> Date columns: issue_d, last_pymnt_d, last_credit_pull_d are not important to the analysis\n",
+    "- grade is part of sub_grade, so let's drop it\n",
     "\n",
-    "> earliest_cr_line which is the month when reported credit line was opened is not important to the analysis\n",
+    "- Date columns: issue_d, last_pymnt_d, last_credit_pull_d are not important to the analysis\n",
     "\n",
-    "> url for LC page with listing data is not important to the analysis\n",
+    "- earliest_cr_line which is the month when reported credit line was opened is not important to the analysis\n",
     "\n",
-    "> addresses: zip_code, addr_state are not important to the analysis"
+    "- url for LC page with listing data is not important to the analysis\n",
+    "\n",
+    "- addresses: zip_code, addr_state are not important to the analysis"
    ]
   },
   {
@@ -1245,10 +1207,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Schema:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1264,6 +1233,13 @@
    ],
    "source": [
     "dl_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First Row Of the dataframe:"
    ]
   },
   {
@@ -1295,7 +1271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> From previous table the number of scaled_features are 81 feature"
+    "From previous table the number of scaled_features are 81 feature"
    ]
   },
   {
@@ -1336,6 +1312,14 @@
     "def compile_model(model):\n",
     "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Build the following deeplearning model with this output shapes consists of 6 fully connected layer with relu function as the activation function and the final activation function is a sigmoid\n",
+    "2. Compile the model with adam optimizer with accuracy metrics and binary_crossentropy loss function"
    ]
   },
   {
@@ -1382,7 +1366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Transform to pandas dataframe before training"
+    "3. Transform to the dataframe to pandas dataframe before training"
    ]
   },
   {
@@ -1398,7 +1382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Split data 80% training set and 20% testing set"
+    "4. Split data 80% training set and 20% testing set"
    ]
   },
   {
@@ -1415,113 +1399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Train the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/40\n",
-      "2096/2096 [==============================] - 33s 10ms/step - loss: 0.5434 - accuracy: 0.8413 - val_loss: 0.1932 - val_accuracy: 0.9663\n",
-      "Epoch 2/40\n",
-      "2096/2096 [==============================] - 23s 11ms/step - loss: 0.1654 - accuracy: 0.9668 - val_loss: 0.1250 - val_accuracy: 0.9628\n",
-      "Epoch 3/40\n",
-      "2096/2096 [==============================] - 25s 12ms/step - loss: 0.1009 - accuracy: 0.9713 - val_loss: 0.0843 - val_accuracy: 0.9722\n",
-      "Epoch 4/40\n",
-      "2096/2096 [==============================] - 27s 13ms/step - loss: 0.0783 - accuracy: 0.9740 - val_loss: 0.0769 - val_accuracy: 0.9717\n",
-      "Epoch 5/40\n",
-      "2096/2096 [==============================] - 28s 13ms/step - loss: 0.0690 - accuracy: 0.9757 - val_loss: 0.0650 - val_accuracy: 0.9766\n",
-      "Epoch 6/40\n",
-      "2096/2096 [==============================] - 29s 14ms/step - loss: 0.0650 - accuracy: 0.9765 - val_loss: 0.0688 - val_accuracy: 0.9737\n",
-      "Epoch 7/40\n",
-      "2096/2096 [==============================] - 31s 15ms/step - loss: 0.0623 - accuracy: 0.9772 - val_loss: 0.0607 - val_accuracy: 0.9778\n",
-      "Epoch 8/40\n",
-      "2096/2096 [==============================] - 29s 14ms/step - loss: 0.0607 - accuracy: 0.9779 - val_loss: 0.0755 - val_accuracy: 0.9728\n",
-      "Epoch 9/40\n",
-      "2096/2096 [==============================] - 33s 16ms/step - loss: 0.0588 - accuracy: 0.9786 - val_loss: 0.0601 - val_accuracy: 0.9786\n",
-      "Epoch 10/40\n",
-      "2096/2096 [==============================] - 33s 16ms/step - loss: 0.0572 - accuracy: 0.9794 - val_loss: 0.0912 - val_accuracy: 0.9629\n",
-      "Epoch 11/40\n",
-      "2096/2096 [==============================] - 34s 16ms/step - loss: 0.0572 - accuracy: 0.9792 - val_loss: 0.0543 - val_accuracy: 0.9808\n",
-      "Epoch 12/40\n",
-      "2096/2096 [==============================] - 30s 15ms/step - loss: 0.0518 - accuracy: 0.9815 - val_loss: 0.0569 - val_accuracy: 0.9799\n",
-      "Epoch 13/40\n",
-      "2096/2096 [==============================] - 37s 18ms/step - loss: 0.0485 - accuracy: 0.9825 - val_loss: 0.0437 - val_accuracy: 0.9843\n",
-      "Epoch 14/40\n",
-      "2096/2096 [==============================] - 28s 13ms/step - loss: 0.0444 - accuracy: 0.9843 - val_loss: 0.0590 - val_accuracy: 0.9803\n",
-      "Epoch 15/40\n",
-      "2096/2096 [==============================] - 28s 13ms/step - loss: 0.0449 - accuracy: 0.9841 - val_loss: 0.0425 - val_accuracy: 0.9848\n",
-      "Epoch 16/40\n",
-      "2096/2096 [==============================] - 32s 15ms/step - loss: 0.0404 - accuracy: 0.9856 - val_loss: 0.0503 - val_accuracy: 0.9824\n",
-      "Epoch 17/40\n",
-      "2096/2096 [==============================] - 35s 17ms/step - loss: 0.0410 - accuracy: 0.9855 - val_loss: 0.0362 - val_accuracy: 0.9871\n",
-      "Epoch 18/40\n",
-      "2096/2096 [==============================] - 33s 16ms/step - loss: 0.0374 - accuracy: 0.9866 - val_loss: 0.0370 - val_accuracy: 0.9867\n",
-      "Epoch 19/40\n",
-      "2096/2096 [==============================] - 34s 16ms/step - loss: 0.0371 - accuracy: 0.9867 - val_loss: 0.0367 - val_accuracy: 0.9868\n",
-      "Epoch 20/40\n",
-      "2096/2096 [==============================] - 34s 16ms/step - loss: 0.0364 - accuracy: 0.9869 - val_loss: 0.0337 - val_accuracy: 0.9877\n",
-      "Epoch 21/40\n",
-      "2096/2096 [==============================] - 35s 17ms/step - loss: 0.0355 - accuracy: 0.9872 - val_loss: 0.0342 - val_accuracy: 0.9878\n",
-      "Epoch 22/40\n",
-      "2096/2096 [==============================] - 34s 16ms/step - loss: 0.0346 - accuracy: 0.9876 - val_loss: 0.0335 - val_accuracy: 0.9880\n",
-      "Epoch 23/40\n",
-      "2096/2096 [==============================] - 37s 18ms/step - loss: 0.0343 - accuracy: 0.9877 - val_loss: 0.0343 - val_accuracy: 0.9875\n",
-      "Epoch 24/40\n",
-      "2096/2096 [==============================] - 34s 16ms/step - loss: 0.0333 - accuracy: 0.9881 - val_loss: 0.0367 - val_accuracy: 0.9866\n",
-      "Epoch 25/40\n",
-      "2096/2096 [==============================] - 36s 17ms/step - loss: 0.0335 - accuracy: 0.9880 - val_loss: 0.0343 - val_accuracy: 0.9875\n",
-      "Epoch 26/40\n",
-      "2096/2096 [==============================] - 35s 17ms/step - loss: 0.0329 - accuracy: 0.9883 - val_loss: 0.0323 - val_accuracy: 0.9884\n",
-      "Epoch 27/40\n",
-      "2096/2096 [==============================] - 38s 18ms/step - loss: 0.0326 - accuracy: 0.9885 - val_loss: 0.0320 - val_accuracy: 0.9885\n",
-      "Epoch 28/40\n",
-      "2096/2096 [==============================] - 38s 18ms/step - loss: 0.0320 - accuracy: 0.9886 - val_loss: 0.0309 - val_accuracy: 0.9890\n",
-      "Epoch 29/40\n",
-      "2096/2096 [==============================] - 37s 18ms/step - loss: 0.0320 - accuracy: 0.9885 - val_loss: 0.0363 - val_accuracy: 0.9866\n",
-      "Epoch 30/40\n",
-      "2096/2096 [==============================] - 35s 17ms/step - loss: 0.0315 - accuracy: 0.9887 - val_loss: 0.0332 - val_accuracy: 0.9880\n",
-      "Epoch 31/40\n",
-      "2096/2096 [==============================] - 39s 18ms/step - loss: 0.0310 - accuracy: 0.9888 - val_loss: 0.0320 - val_accuracy: 0.9884\n",
-      "Epoch 32/40\n",
-      "2096/2096 [==============================] - 39s 19ms/step - loss: 0.0311 - accuracy: 0.9889 - val_loss: 0.0332 - val_accuracy: 0.9881\n",
-      "Epoch 33/40\n",
-      "2096/2096 [==============================] - 35s 17ms/step - loss: 0.0300 - accuracy: 0.9893 - val_loss: 0.0335 - val_accuracy: 0.9879\n",
-      "Epoch 34/40\n",
-      "2096/2096 [==============================] - 38s 18ms/step - loss: 0.0307 - accuracy: 0.9889 - val_loss: 0.0301 - val_accuracy: 0.9892\n",
-      "Epoch 35/40\n",
-      "2096/2096 [==============================] - 39s 19ms/step - loss: 0.0304 - accuracy: 0.9890 - val_loss: 0.0330 - val_accuracy: 0.9880\n",
-      "Epoch 36/40\n",
-      "2096/2096 [==============================] - 33s 16ms/step - loss: 0.0295 - accuracy: 0.9894 - val_loss: 0.0304 - val_accuracy: 0.9892\n",
-      "Epoch 37/40\n",
-      "2096/2096 [==============================] - 43s 21ms/step - loss: 0.0292 - accuracy: 0.9895 - val_loss: 0.0296 - val_accuracy: 0.9894\n",
-      "Epoch 38/40\n",
-      "2096/2096 [==============================] - 41s 20ms/step - loss: 0.0293 - accuracy: 0.9894 - val_loss: 0.0314 - val_accuracy: 0.9886\n",
-      "Epoch 39/40\n",
-      "2096/2096 [==============================] - 42s 20ms/step - loss: 0.0289 - accuracy: 0.9898 - val_loss: 0.0321 - val_accuracy: 0.9888\n",
-      "Epoch 40/40\n",
-      "2096/2096 [==============================] - 41s 20ms/step - loss: 0.0292 - accuracy: 0.9895 - val_loss: 0.0295 - val_accuracy: 0.9894\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fedb1dde050>"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fit(x=x_train, y=y_train, epochs=40, batch_size=512, validation_data=(x_test, y_test), verbose=1)"
+    "5. Finally, Train the model"
    ]
   },
   {
@@ -1534,9 +1412,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loss Graph:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1563,6 +1450,13 @@
    ],
    "source": [
     "losses[['loss','val_loss']].plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accuracy Graph:"
    ]
   },
   {
@@ -1603,14 +1497,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Accuracy = 98.94%"
+    "**Accuracy = 98.94%**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Saving the model ..."
+    "6. Saving the model ..."
    ]
   },
   {
@@ -1642,7 +1536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Using the map reduce machine learning models of pyspark we can build model using HDFS"
+    "1. Using the map reduce machine learning models of pyspark and spark dataframe we can build model using HDFS"
    ]
   },
   {
@@ -1658,7 +1552,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Split data 80% training set and 20% testing set"
+    "2. Split data 80% training set and 20% testing set\n",
+    "3. Train the Gradient Boosting Tree Classifier using the training data"
    ]
   },
   {
@@ -1702,7 +1597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Saving the model ..."
+    "4. Finally, Saving the model ..."
    ]
   },
   {
@@ -1718,7 +1613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Some Predictions"
+    "Some Predictions:"
    ]
   },
   {
@@ -1843,7 +1738,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Previous table has FP, FN, TP and TN values"
+    "Previous table has False Positive, False Negative, True Positive and True Negative values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Accuracy = 97.46%**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"9\"></a>\n",
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- We visualized the dataset using univarient and multivarient visualization and deduced some information from it\n",
+    "- We've done some Data cleaning and preprocessing to prepare the data to build our models\n",
+    "- We using HDFS for both data visualizing, data preprocessing and building gradient boosing tree classifier with accuracy 97.46%\n",
+    "- We also made a deeplearning model with accuracy 98.94%\n",
+    "- Both models assess whether or not a new customer is likely to pay back the loan, so this analysis is very important for decision making."
    ]
   }
  ],
@@ -1863,7 +1784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
